# Siphon

./: .env.example  .gitignore  Cargo.toml  README.md  feedbacks.txt  package-lock.json  package.json
.github/workflows/: ci.yml  desktop-build.yml
apps/desktop/: index.html  package.json  tailwind.config.ts  vite.config.ts
apps/desktop/src/: App.tsx  globals.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  main.rs  state.rs
apps/keeper-node/: Cargo.toml
apps/keeper-node/src/: agent_loop.rs  api.rs  capture.rs  chain.rs  config.rs  db.rs  dht.rs  executor.rs  gossip.rs  inference.rs  keeper.rs  lib.rs  main.rs  monitor.rs  node.rs  shard.rs
apps/web/: components.json  middleware.ts  next.config.js  package.json  siphon.db-shm  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vercel.json
apps/web/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
apps/web/components/: battle-arena.tsx  battle-card.tsx  battle-round-display.tsx  capture-challenge.tsx  cosmetic-card.tsx  cosmetic-preview.tsx  drift-map.tsx  equip-cosmetics.tsx  fusion-preview.tsx  game-fx-layer.tsx  grid-scan.tsx  matchmaking-queue.tsx  onboarding-tracker.tsx  p2p-status.tsx  providers.tsx  reputation-display.tsx  route-transition-shell.tsx  (+7 more)
docs/: business-case.md  desktop-app-plan.md  gtm-plan.md  loan-protocol.md  pitch-deck-final.md  revised-sections-protocol.md  revised-sections-techspec.md  siphon-mvp-scope-v1.1.docx  siphon-pitch-deck.pptx  siphon-protocol-v1.2.docx  siphon-tech-spec-v2.docx
(+128 files in other folders)
