[package]
name = "siphon-keeper"
version = "0.1.0"
edition = "2021"

[lib]
name = "siphon_keeper"
path = "src/lib.rs"

[[bin]]
name = "siphon-keeper"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
libp2p = { version = "0.54", features = ["kad", "gossipsub", "tcp", "websocket", "noise", "yamux", "identify", "dns", "macros", "tokio"] }
alloy = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
sha3 = "0.10"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sysinfo = "0.32"
toml = "0.8"
colored = "2"
indicatif = "0.17"
dialoguer = "0.11"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }

[dev-dependencies]
tempfile = "3"
